--- a/install
+++ b/install
@@ -8,26 +8,6 @@ set -e
 
 echo ''
 
-info () {
-  printf "\r  [ \033[00;34m..\033[0m ] $1\n"
-}
-
-user () {
-  printf "\r  [ \033[0;33m??\033[0m ] $1\n"
-}
-
-success () {
-  printf "\r\033[2K  [ \033[00;32mOK\033[0m ] $1\n"
-}
-
-fail () {
-  printf "\r\033[2K  [\033[0;31mFAIL\033[0m] $1\n"
-  echo ''
-  exit
-}
-
-echo $DOTFILES
-
 
 setup_gitconfig () {
   if ! [ -f git/gitconfig.local.symlink ]
@@ -143,26 +123,26 @@ setup_gitconfig
 install_dotfiles
 
 # If we're on a Mac, let's install and setup homebrew.
-if [ "$(uname -s)" == "Darwin" ]
-then
-  info "installing dependencies"
-  if source bin/dot | while read -r data; do info "$data"; done
-  then
-    success "dependencies installed"
-  else
-    fail "error installing dependencies"
-  fi
-fi
+# if [ "$(uname -s)" == "Darwin" ]
+# then
+#   info "installing dependencies"
+#   if source bin/dot | while read -r data; do info "$data"; done
+#   then
+#     success "dependencies installed"
+#   else
+#     fail "error installing dependencies"
+#   fi
+# fi
 
-if [ "$(uname -s)" == "Linux" ]
-then
-  info "installing dependencies"
-  # Install software
-  echo "› $DOTFILES/script/install-ubuntu"
-  $DOTFILES/script/install-ubuntu
-fi
+# if is_ubuntu; then
+#   info "Ubuntu : installing dependencies"
+#   # Install software
+#   echo "› $DOTFILES/script/install-ubuntu"
+#   $DOTFILES/script/install-ubuntu
+# fi
 
+$DOTFILES/init/$(get_os)/init.sh
 
 
 echo ''
-echo '  All installed!'
+info '  All installed!'
