Renaming to be consistent

--- a/install
+++ b/install
@@ -122,26 +122,7 @@ install_dotfiles () {
 setup_gitconfig
 install_dotfiles
 
-# If we're on a Mac, let's install and setup homebrew.
-# if [ "$(uname -s)" == "Darwin" ]
-# then
-#   info "installing dependencies"
-#   if source bin/dot | while read -r data; do info "$data"; done
-#   then
-#     success "dependencies installed"
-#   else
-#     fail "error installing dependencies"
-#   fi
-# fi
-
-# if is_ubuntu; then
-#   info "Ubuntu : installing dependencies"
-#   # Install software
-#   echo "› $DOTFILES/script/install-ubuntu"
-#   $DOTFILES/script/install-ubuntu
-# fi
-
-$DOTFILES/init/$(get_os)/init.sh
+$DOTFILES/_init/$(get_os)/init.sh
 
 
 echo ''
