--- a/install
+++ b/install
@@ -122,7 +122,7 @@ install_dotfiles () {
 setup_gitconfig
 install_dotfiles
 
-$DOTFILES/_init/$(get_os)/init.sh
+$DOTFILES/_$(get_os)/init.sh
 
 
 echo ''
