--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1030,7 +1030,7 @@ Snippets for programming.
 
 #+begin_src emacs-lisp
 (use-package org
-  :ensure org-plus-contrib
+  
   :bind (("C-c l" . org-store-link)
          ("C-c c" . org-capture)
          ("C-c a" . org-agenda)
@@ -1063,6 +1063,7 @@ Snippets for programming.
   ;; Either the Key ID or set to nil to use symmetric encryption.
   (setq org-crypt-key "0DF2D6C6E8443FE7"))
 
+  (use-package org-contrib)
 #+end_src
 
 *** Org UI
