--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -676,6 +676,7 @@ Try the new Hype completion System
            ("C-c b" . consult-bookmark)
            ("C-c k" . consult-kmacro)
            ;; C-x bindings (ctl-x-map)
+           ("C-x C-r" . consult-recent-file)     
            ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command
            ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
            ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
@@ -828,9 +829,6 @@ Try the new Hype completion System
 #+end_src
 
 ** General Programming
-
-
-
 
 *** Magit
 
