--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -828,6 +828,87 @@ Try the new Hype completion System
 
 #+end_src
 
+** Windows
+*** Ace Window
+[[https://github.com/abo-abo/ace-window][ace-window]] Quickly siwtch windows
+
+#+begin_src emacs-lisp
+  (use-package ace-window
+    :bind (([remap other-window] . ace-window))
+    :config
+    (setq aw-keys '(?q ?s ?d ?f ?g ?h ?j ?k ?l))
+    ;; increase size face
+    (custom-set-faces
+     '(aw-leading-char-face
+       ((t (:inherit ace-jump-face-foreground :height 3.0))))))
+ #+end_src
+
+*** Golden-ratio
+
+ Resize automatically the windows you are working
+
+ #+begin_src emacs-lisp
+   (use-package golden-ratio  
+     :diminish t
+     :init
+     (golden-ratio-mode 1)
+     :config
+     (setq golden-ratio-extra-commands
+           (append golden-ratio-extra-commands
+                   '(ace-window))))
+ #+end_src
+
+
+*** Toggle Window Split Horizontally ==C-z w -=
+Bound to =C-z w -=.
+#+begin_src emacs-lisp
+  (defun nc/toggle-split-window-horizontally ()
+    (interactive)
+    (if (= (count-windows) 2)
+        (let* ((this-win-buffer (window-buffer))
+               (next-win-buffer (window-buffer (next-window)))
+               (this-win-edges (window-edges (selected-window)))
+               (next-win-edges (window-edges (next-window)))
+               (this-win-2nd (not (and (<= (car this-win-edges)
+                                           (car next-win-edges))
+                                       (<= (cadr this-win-edges)
+                                           (cadr next-win-edges)))))
+               (splitter
+                (if (= (car this-win-edges)
+                       (car (window-edges (next-window))))
+                    'split-window-horizontally
+                  'split-window-vertically)))
+          (delete-other-windows)
+          (let ((first-win (selected-window)))
+            (funcall splitter)
+            (if this-win-2nd (other-window 1))
+            (set-window-buffer (selected-window) this-win-buffer)
+            (set-window-buffer (next-window) next-win-buffer)
+            (select-window first-win)
+            (if this-win-2nd (other-window 1))))))
+
+  (bind-key "C-z w  -" 'nc/toggle-split-window-horizontally)
+#+end_src
+
+
+*** Toggle Window Split Vertically =C-z w +=
+Split window right with =C-z w += and move there.
+If windows are splitted delete other windows.
+#+begin_src emacs-lisp
+  (defun nc--split-window-right-and-move-there-dammit ()
+    (split-window-right)
+    (windmove-right))
+
+  (defun nc/toggle-split-window-vertically ()
+    (interactive)
+    (if (> (count-windows) 1)
+        (delete-other-windows)
+      (nc--split-window-right-and-move-there-dammit)))
+
+  (bind-key "C-z w +" 'nc/toggle-split-window-vertically)
+  #+end_src
+
+
 ** General Programming
 
 *** Magit
@@ -1988,7 +2069,6 @@ Insert time slot mainly used when I schedule meeting or appointment.
 
    (bind-key "C-z i D" 'nc/insert-datestamp-inactive)
  #+end_src
-
 ** =(provide 'init)=
 
 This concludes the =init.el= file.
