Customize speed commands

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -830,7 +830,7 @@ Try the new Hype completion System
 
 ** Windows
 *** Ace Window
-[[https://github.com/abo-abo/ace-window][ace-window]] Quickly siwtch windows
+[[https://github.com/abo-abo/ace-window][ace-window]] Quickly switch and move windows
 
 #+begin_src emacs-lisp
   (use-package ace-window
@@ -860,6 +860,7 @@ Try the new Hype completion System
 
 
 *** Toggle Window Split Horizontally ==C-z w -=
+
 Bound to =C-z w -=.
 #+begin_src emacs-lisp
   (defun nc/toggle-split-window-horizontally ()
@@ -1796,53 +1797,45 @@ Targets include this file and any file contributing to the agenda - up to 2 leve
  #+end_src
 *** Speed commands
  From https://orgmode.org/worg/org-hacks.html
+Customize speed-commands :
+- N :: Show next entry keeping other entries closed
+- P :: Show previous entry keeping previous entries closed
+ 
  #+begin_src emacs-lisp
-     (defun nc/org-show-next-heading-tidily ()
-       "Show next entry, keeping other entries closed."
-       (if (save-excursion (end-of-line) (outline-invisible-p))
-           (progn (org-show-entry) (show-children))
-         (outline-next-heading)
-         (unless (and (bolp) (org-on-heading-p))
-           (org-up-heading-safe)
-           (hide-subtree)
-           (error "Boundary reached"))
-         (org-overview)
-         (org-reveal t)
-         (org-show-entry)
-         (show-children)))
+   (defun nc/org-show-next-heading-tidily ()
+     "Show next entry, keeping other entries closed."
+     (if (save-excursion (end-of-line) (outline-invisible-p))
+         (progn (org-show-entry) (show-children))
+       (outline-next-heading)
+       (unless (and (bolp) (org-on-heading-p))
+         (org-up-heading-safe)
+         (hide-subtree)
+         (error "Boundary reached"))
+       (org-overview)
+       (org-reveal t)
+       (org-show-entry)
+       (show-children)))
 
-     (defun nc/org-show-previous-heading-tidily ()
-       "Show previous entry, keeping other entries closed."
-       (let ((pos (point)))
-         (outline-previous-heading)
-         (unless (and (< (point) pos) (bolp) (org-on-heading-p))
-           (goto-char pos)
-           (hide-subtree)
-           (error "Boundary reached"))
-         (org-overview)
-         (org-reveal t)
-         (org-show-entry)
-         (show-children)))
+   (defun nc/org-show-previous-heading-tidily ()
+     "Show previous entry, keeping other entries closed."
+     (let ((pos (point)))
+       (outline-previous-heading)
+       (unless (and (< (point) pos) (bolp) (org-on-heading-p))
+         (goto-char pos)
+         (hide-subtree)
+         (error "Boundary reached"))
+       (org-overview)
+       (org-reveal t)
+       (org-show-entry)
+       (show-children)))
 
-     (setq org-use-speed-commands t)
+   (setq org-use-speed-commands t)
 
-   (setq org-use-speed-commands
-         (lambda () (and (looking-at org-outline-regexp) (looking-back "^\**"))))
+   ;; (setq org-use-speed-commands
+   ;;       (lambda () (and (looking-at org-outline-regexp) (looking-back "^\**"))))
 
-   (setq org-speed-commands
-         '(("n" nc/org-show-next-heading-tidily)
-           ("p" nc/org-show-previous-heading-tidily)
-           ("N" org-narrow-to-subtree)
-           ("$" org-archive-subtree)
-           ("A" org-archive-subtree)
-           ("W" widen)
-           ("d" org-down-element)
-           ("k" org-cut-subtree)
-           ("m" org-mark-subtree)
-           ("s" org-sort)
-           ("X" org-todo-done)
-           ("y" org-todo-yesterday)))
-
+   (push '("N" nc/org-show-next-heading-tidily) org-speed-commands)
+   (push '("P" nc/org-show-previous-heading-tidily) org-speed-commands)
 
    (defun nc/org-go-speed ()
      "Goes to the beginning of an element's header, so that you can execute speed commands."
@@ -1852,7 +1845,7 @@ Targets include this file and any file contributing to the agenda - up to 2 leve
            (beginning-of-line)
          (outline-previous-heading))))
 
-   (bind-key "C-c o /" 'nc/org-go-speed)
+   (bind-key "C-z /" 'nc/org-go-speed org-mode-map)
  #+end_src
 
 *** Org Structure templates
