Improve org-speed-command behavior & move heading

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -624,6 +624,88 @@ Use Input Font (http://input.fontbureau.com/)  on Linux, Monaco on MacOS
   (if (fboundp 'fringe-mode)
       (fringe-mode 2))
 #+end_src
+** Windows
+*** Ace Window
+[[https://github.com/abo-abo/ace-window][ace-window]] Quickly switch and move windows
+
+#+begin_src emacs-lisp
+  (use-package ace-window
+    :bind (([remap other-window] . ace-window))
+    :config
+    (setq aw-keys '(?q ?s ?d ?f ?g ?h ?j ?k ?l))
+    ;; increase size face
+    (custom-set-faces
+     '(aw-leading-char-face
+       ((t (:inherit ace-jump-face-foreground :height 3.0))))))
+ #+end_src
+
+*** Golden Ratio
+
+ Resize automatically the windows you are working
+
+ #+begin_src emacs-lisp
+   (use-package golden-ratio  
+     :diminish t
+     :init
+     (golden-ratio-mode 1)
+     :config
+     (setq golden-ratio-extra-commands
+           (append golden-ratio-extra-commands
+                   '(ace-window))))
+ #+end_src
+
+
+*** Toggle Window Split Horizontally ==C-z w -=
+
+Bound to =C-z w -=.
+#+begin_src emacs-lisp
+  (defun nc/toggle-split-window-horizontally ()
+    (interactive)
+    (if (= (count-windows) 2)
+        (let* ((this-win-buffer (window-buffer))
+               (next-win-buffer (window-buffer (next-window)))
+               (this-win-edges (window-edges (selected-window)))
+               (next-win-edges (window-edges (next-window)))
+               (this-win-2nd (not (and (<= (car this-win-edges)
+                                           (car next-win-edges))
+                                       (<= (cadr this-win-edges)
+                                           (cadr next-win-edges)))))
+               (splitter
+                (if (= (car this-win-edges)
+                       (car (window-edges (next-window))))
+                    'split-window-horizontally
+                  'split-window-vertically)))
+          (delete-other-windows)
+          (let ((first-win (selected-window)))
+            (funcall splitter)
+            (if this-win-2nd (other-window 1))
+            (set-window-buffer (selected-window) this-win-buffer)
+            (set-window-buffer (next-window) next-win-buffer)
+            (select-window first-win)
+            (if this-win-2nd (other-window 1))))))
+
+  (bind-key "C-z w  -" 'nc/toggle-split-window-horizontally)
+#+end_src
+
+
+*** Toggle Window Split Vertically =C-z w +=
+Split window right with =C-z w += and move there.
+If windows are splitted delete other windows.
+#+begin_src emacs-lisp
+  (defun nc--split-window-right-and-move-there-dammit ()
+    (split-window-right)
+    (windmove-right))
+
+  (defun nc/toggle-split-window-vertically ()
+    (interactive)
+    (if (> (count-windows) 1)
+        (delete-other-windows)
+      (nc--split-window-right-and-move-there-dammit)))
+
+  (bind-key "C-z w +" 'nc/toggle-split-window-vertically)
+  #+end_src
+
+
 ** Completion
 Try the new Hype completion System
 - Selectrum 
@@ -833,88 +915,6 @@ Try the new Hype completion System
 
 
 #+end_src
-
-** Windows Management
-*** Ace Window
-[[https://github.com/abo-abo/ace-window][ace-window]] Quickly switch and move windows
-
-#+begin_src emacs-lisp
-  (use-package ace-window
-    :bind (([remap other-window] . ace-window))
-    :config
-    (setq aw-keys '(?q ?s ?d ?f ?g ?h ?j ?k ?l))
-    ;; increase size face
-    (custom-set-faces
-     '(aw-leading-char-face
-       ((t (:inherit ace-jump-face-foreground :height 3.0))))))
- #+end_src
-
-*** Golden-ratio
-
- Resize automatically the windows you are working
-
- #+begin_src emacs-lisp
-   (use-package golden-ratio  
-     :diminish t
-     :init
-     (golden-ratio-mode 1)
-     :config
-     (setq golden-ratio-extra-commands
-           (append golden-ratio-extra-commands
-                   '(ace-window))))
- #+end_src
-
-
-*** Toggle Window Split Horizontally ==C-z w -=
-
-Bound to =C-z w -=.
-#+begin_src emacs-lisp
-  (defun nc/toggle-split-window-horizontally ()
-    (interactive)
-    (if (= (count-windows) 2)
-        (let* ((this-win-buffer (window-buffer))
-               (next-win-buffer (window-buffer (next-window)))
-               (this-win-edges (window-edges (selected-window)))
-               (next-win-edges (window-edges (next-window)))
-               (this-win-2nd (not (and (<= (car this-win-edges)
-                                           (car next-win-edges))
-                                       (<= (cadr this-win-edges)
-                                           (cadr next-win-edges)))))
-               (splitter
-                (if (= (car this-win-edges)
-                       (car (window-edges (next-window))))
-                    'split-window-horizontally
-                  'split-window-vertically)))
-          (delete-other-windows)
-          (let ((first-win (selected-window)))
-            (funcall splitter)
-            (if this-win-2nd (other-window 1))
-            (set-window-buffer (selected-window) this-win-buffer)
-            (set-window-buffer (next-window) next-win-buffer)
-            (select-window first-win)
-            (if this-win-2nd (other-window 1))))))
-
-  (bind-key "C-z w  -" 'nc/toggle-split-window-horizontally)
-#+end_src
-
-
-*** Toggle Window Split Vertically =C-z w +=
-Split window right with =C-z w += and move there.
-If windows are splitted delete other windows.
-#+begin_src emacs-lisp
-  (defun nc--split-window-right-and-move-there-dammit ()
-    (split-window-right)
-    (windmove-right))
-
-  (defun nc/toggle-split-window-vertically ()
-    (interactive)
-    (if (> (count-windows) 1)
-        (delete-other-windows)
-      (nc--split-window-right-and-move-there-dammit)))
-
-  (bind-key "C-z w +" 'nc/toggle-split-window-vertically)
-  #+end_src
-
 
 ** General Programming
 
@@ -1835,10 +1835,9 @@ Customize speed-commands :
        (org-show-entry)
        (show-children)))
 
-   (setq org-use-speed-commands t)
-
-   ;; (setq org-use-speed-commands
-   ;;       (lambda () (and (looking-at org-outline-regexp) (looking-back "^\**"))))
+   ;; Improve speed command behavior
+   (setq org-use-speed-commands
+          (lambda () (and (looking-at org-outline-regexp) (looking-back "^\**"))))
 
    (push '("N" nc/org-show-next-heading-tidily) org-speed-commands)
    (push '("P" nc/org-show-previous-heading-tidily) org-speed-commands)
