Headers one up level

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -982,7 +982,7 @@ Magit a git porcelain inside Emacs !
     :bind-keymap ("C-c p" . projectile-command-map))
 #+end_src
 
-**** Expand region
+*** Expand region
 #+BEGIN_QUOTE
 Expand region increases the selected region by semantic units. Just keep pressing the key until it selects what you want.
 
@@ -998,7 +998,7 @@ Expand region increases the selected region by semantic units. Just keep pressin
    ("C-=" . er/expand-region))
  #+end_src
 
-**** Multiple Cursors
+*** Multiple Cursors
 
  [[https://github.com/magnars/multiple-cursors.el][multiple-cursors.el]] This package can create several cursors to all do the same things.
 
@@ -1015,8 +1015,8 @@ Expand region increases the selected region by semantic units. Just keep pressin
       ("C-*" .  mc/mark-all-dwim)))
  #+end_src
 
-**** Treemacs
-**** Undo Tree
+*** Treemacs
+*** Undo Tree
  This lets you use =C-x u= (=undo-tree-visualize=)
  #+begin_src emacs-lisp
    (use-package undo-tree
@@ -1028,9 +1028,9 @@ Expand region increases the selected region by semantic units. Just keep pressin
        (setq undo-tree-visualizer-diff t)))
  #+end_src
 
-**** Smartparens
+*** Smartparens
 
-Smart parens for all modes with paredit bindings.
+Smart parens for all programming modes with paredit bindings.
 
 #+begin_src emacs-lisp
   (use-package smartparens
@@ -1074,7 +1074,7 @@ Smart parens for all modes with paredit bindings.
 #+end_src
 
 
-**** Yasnippet
+*** Yasnippet
 Snippets for programming.
 
  #+begin_src emacs-lisp
@@ -1095,7 +1095,7 @@ Consult integration
 #+end_src
 
 
-**** Company
+*** Company
 
    #+begin_src emacs-lisp
      (use-package company
