--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1135,6 +1135,44 @@ Consult integration
       (company-statistics-mode 1))
    #+end_src
 
+*** vterm -> =C-z v=  =M-<f12>=
+Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
+#+begin_src emacs-lisp
+  (use-package vterm
+    :ensure
+    :commands vterm
+    :custom
+    (vterm-disable-bold-font nil)
+    (vterm-disable-inverse-video nil)
+    (vterm-disable-underline nil)
+    (vterm-kill-buffer-on-exit t)
+    (vterm-max-scrollback 9999)
+    (vterm-shell "/bin/zsh")
+    (vterm-term-environment-variable "xterm-256color")
+
+    :bind (("C-z v" . vterm)
+           ("M-<f12>" . vterm)))
+
+#+end_src
+*** aweshell -> =C-z e=
+
+#+begin_src emacs-lisp
+  (use-package aweshell
+    :straight (aweshell
+               :type git
+               :host github
+               :repo "manateelazycat/aweshell")
+    :custom
+    (eshell-highlight-prompt nil)
+    ;; (eshell-prompt-function 'epe-theme-pipeline)
+
+    :bind
+    (("C-z e" . aweshell-dedicated-toggle))
+    )
+
+#+end_src
+
+
    
 ** Programming
 ** Org
